--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link href="//www.google-analytics.com" rel="dns-prefetch">
-  <link href="assets/css/style.min.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
 
   <script src="assets/components/modernizr/modernizr.js"></script>
 
