--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
   <link href="//www.google-analytics.com" rel="dns-prefetch">
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <script src="assets/components/modernizr/modernizr.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
 
 </head>
 <body>
