--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <link href="//www.google-analytics.com" rel="dns-prefetch">
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="/assets/css/style.css" rel="stylesheet">
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
 
@@ -49,7 +49,7 @@
   ga('send', 'pageview');
 </script>
 
-<script src="assets/js/scripts.js"></script>
+<script src="/assets/js/scripts.js"></script>
 
 </body>
 </html>
